--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,9 @@ publish/
 #*.pubxml
 
 # NuGet Packages Directory
-packages/*
+#/packages/*
+packages
+#/packages/
 ## TODO: If the tool you use requires repositories.config
 ## uncomment the next line
 #!packages/repositories.config
