--- a/MsftBuild.Model/MsftBuild.SampleProject/MsftBuild.SampleProject.csproj
+++ b/MsftBuild.Model/MsftBuild.SampleProject/MsftBuild.SampleProject.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25AF3306-9FC0-4331-8A9B-2FC46A84E1F7}</ProjectGuid>
+    <ProjectGuid>{41DBF516-AB27-49B0-B6D8-985B2CB33D45}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MsftBuild.Model</RootNamespace>
-    <AssemblyName>MsftBuild.Model</AssemblyName>
+    <RootNamespace>MsftBuild.SampleProject</RootNamespace>
+    <AssemblyName>MsftBuild.SampleProject</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,26 +30,47 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Activities.Build" />
-    <Reference Include="Microsoft.Build" />
-    <Reference Include="Microsoft.Build.Conversion.v4.0" />
-    <Reference Include="Microsoft.Build.Engine" />
-    <Reference Include="Microsoft.Build.Framework" />
-    <Reference Include="Microsoft.Build.Tasks.v4.0" />
-    <Reference Include="Microsoft.Build.Utilities.v4.0" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IProcessor.cs" />
-    <Compile Include="Project.cs" />
+    <Compile Include="Processor.xaml.cs">
+      <DependentUpon>Processor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Project.xaml.cs">
+      <DependentUpon>Project.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MsftBuild.Markup\MsftBuild.Markup.csproj">
+      <Project>{2d736885-5af6-453b-a865-f958610839fc}</Project>
+      <Name>MsftBuild.Markup</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MsftBuild.Model\MsftBuild.Model.csproj">
+      <Project>{25af3306-9fc0-4331-8a9b-2fc46a84e1f7}</Project>
+      <Name>MsftBuild.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Processor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Project.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
