--- a/MsftBuild.Model/MsftBuild/MsftBuild.csproj
+++ b/MsftBuild.Model/MsftBuild/MsftBuild.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25AF3306-9FC0-4331-8A9B-2FC46A84E1F7}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{08CF996E-8B43-4695-A64E-23DC3EA43625}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MsftBuild.Model</RootNamespace>
-    <AssemblyName>MsftBuild.Model</AssemblyName>
+    <RootNamespace>MsftBuild</RootNamespace>
+    <AssemblyName>MsftBuild</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,13 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Activities.Build" />
-    <Reference Include="Microsoft.Build" />
-    <Reference Include="Microsoft.Build.Conversion.v4.0" />
-    <Reference Include="Microsoft.Build.Engine" />
-    <Reference Include="Microsoft.Build.Framework" />
-    <Reference Include="Microsoft.Build.Tasks.v4.0" />
-    <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -44,45 +40,34 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationModel\Application.cs" />
-    <Compile Include="ApplicationModel\ArgumentParser.cs" />
-    <Compile Include="ApplicationModel\Arguments.cs" />
-    <Compile Include="ApplicationModel\IArgumentParser.cs" />
-    <Compile Include="AssemblyInformation.cs" />
-    <Compile Include="BuildConfiguration.cs" />
-    <Compile Include="BuildTask.cs" />
-    <Compile Include="BuildProfile.cs" />
-    <Compile Include="Dependency.cs" />
-    <Compile Include="Directive.cs" />
-    <Compile Include="IFile.cs" />
-    <Compile Include="IState.cs" />
-    <Compile Include="IProcessor.cs" />
-    <Compile Include="IProject.cs" />
-    <Compile Include="ITask.cs" />
-    <Compile Include="LogEventLevel.cs" />
-    <Compile Include="LoggingSettings.cs" />
-    <Compile Include="Processor.cs" />
-    <Compile Include="Project.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\Extensions.cs" />
-    <Compile Include="Serialization\ISerializer.cs" />
-    <Compile Include="Serialization\ISerializerLocator.cs" />
-    <Compile Include="Serialization\JsonSerializer.cs" />
-    <Compile Include="Serialization\SerializerLocator.cs" />
-    <Compile Include="Serialization\XamlSerializer.cs" />
-    <Compile Include="Serialization\XmlSerializer.cs" />
-    <Compile Include="TargetFramework.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MsftBuild.Markup\MsftBuild.Markup.csproj">
+      <Project>{2d736885-5af6-453b-a865-f958610839fc}</Project>
+      <Name>MsftBuild.Markup</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MsftBuild.Model\MsftBuild.Model.csproj">
+      <Project>{25AF3306-9FC0-4331-8A9B-2FC46A84E1F7}</Project>
+      <Name>MsftBuild.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Processors\" />
+    <Folder Include="Projects\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
