--- a/MsftBuild.Model/SampleFormats/SampleFormats.csproj
+++ b/MsftBuild.Model/SampleFormats/SampleFormats.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25AF3306-9FC0-4331-8A9B-2FC46A84E1F7}</ProjectGuid>
+    <ProjectGuid>{DE9F42BE-7FED-4D6A-97D9-697C6B281DCD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MsftBuild.Model</RootNamespace>
-    <AssemblyName>MsftBuild.Model</AssemblyName>
+    <RootNamespace>SampleFormats</RootNamespace>
+    <AssemblyName>SampleFormats</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,59 +30,57 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Activities.Build" />
-    <Reference Include="Microsoft.Build" />
-    <Reference Include="Microsoft.Build.Conversion.v4.0" />
-    <Reference Include="Microsoft.Build.Engine" />
-    <Reference Include="Microsoft.Build.Framework" />
-    <Reference Include="Microsoft.Build.Tasks.v4.0" />
-    <Reference Include="Microsoft.Build.Utilities.v4.0" />
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationModel\Application.cs" />
-    <Compile Include="ApplicationModel\ArgumentParser.cs" />
-    <Compile Include="ApplicationModel\Arguments.cs" />
-    <Compile Include="ApplicationModel\IArgumentParser.cs" />
-    <Compile Include="AssemblyInformation.cs" />
-    <Compile Include="BuildConfiguration.cs" />
-    <Compile Include="BuildTask.cs" />
-    <Compile Include="BuildProfile.cs" />
-    <Compile Include="Dependency.cs" />
-    <Compile Include="Directive.cs" />
-    <Compile Include="IFile.cs" />
-    <Compile Include="IState.cs" />
-    <Compile Include="IProcessor.cs" />
-    <Compile Include="IProject.cs" />
-    <Compile Include="ITask.cs" />
-    <Compile Include="LogEventLevel.cs" />
-    <Compile Include="LoggingSettings.cs" />
-    <Compile Include="Processor.cs" />
-    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\Extensions.cs" />
-    <Compile Include="Serialization\ISerializer.cs" />
-    <Compile Include="Serialization\ISerializerLocator.cs" />
-    <Compile Include="Serialization\JsonSerializer.cs" />
-    <Compile Include="Serialization\SerializerLocator.cs" />
-    <Compile Include="Serialization\XamlSerializer.cs" />
-    <Compile Include="Serialization\XmlSerializer.cs" />
-    <Compile Include="TargetFramework.cs" />
+    <Compile Include="Xaml\Processor.xaml.cs">
+      <DependentUpon>Processor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Xaml\Project.xaml.cs">
+      <DependentUpon>Project.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Page Include="Xaml\Processor.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Xaml\Project.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Json\Project.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Xml\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Contoso.Tasks\Contoso.Tasks.csproj">
+      <Project>{90208adc-86b5-4b9b-91ad-2c996c7aefac}</Project>
+      <Name>Contoso.Tasks</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MsftBuild.Markup\MsftBuild.Markup.csproj">
+      <Project>{2d736885-5af6-453b-a865-f958610839fc}</Project>
+      <Name>MsftBuild.Markup</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MsftBuild.Model\MsftBuild.Model.csproj">
+      <Project>{25af3306-9fc0-4331-8a9b-2fc46a84e1f7}</Project>
+      <Name>MsftBuild.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
