--- a/MsftBuild.Model/MsftBuild.Model/MsftBuild.Model.csproj
+++ b/MsftBuild.Model/MsftBuild.Model/MsftBuild.Model.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentCommandLineParser, Version=1.4.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentCommandLineParser.1.4.3\lib\net35\FluentCommandLineParser.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Activities.Build" />
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.Build.Conversion.v4.0" />
@@ -60,6 +64,7 @@
     <Compile Include="BuildConfiguration.cs" />
     <Compile Include="BuildTask.cs" />
     <Compile Include="BuildProfile.cs" />
+    <Compile Include="CommandBase.cs" />
     <Compile Include="Dependency.cs" />
     <Compile Include="Directive.cs" />
     <Compile Include="IFile.cs" />
