--- a/MsftBuild.Model/MsftBuild.Model/MsftBuild.Model.csproj
+++ b/MsftBuild.Model/MsftBuild.Model/MsftBuild.Model.csproj
@@ -34,13 +34,6 @@
       <HintPath>..\packages\FluentCommandLineParser.1.4.3\lib\net35\FluentCommandLineParser.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Activities.Build" />
-    <Reference Include="Microsoft.Build" />
-    <Reference Include="Microsoft.Build.Conversion.v4.0" />
-    <Reference Include="Microsoft.Build.Engine" />
-    <Reference Include="Microsoft.Build.Framework" />
-    <Reference Include="Microsoft.Build.Tasks.v4.0" />
-    <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -57,33 +50,50 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationModel\Application.cs" />
+    <Compile Include="ApplicationModel\ApplicationArguments.cs" />
     <Compile Include="ApplicationModel\ArgumentParser.cs" />
     <Compile Include="ApplicationModel\Arguments.cs" />
     <Compile Include="ApplicationModel\IArgumentParser.cs" />
     <Compile Include="AssemblyInformation.cs" />
+    <Compile Include="AssignCurrentDirectoryTask.cs" />
     <Compile Include="BuildConfiguration.cs" />
-    <Compile Include="BuildTask.cs" />
+    <Compile Include="BuildProjectTask.cs" />
     <Compile Include="BuildProfile.cs" />
     <Compile Include="CommandBase.cs" />
     <Compile Include="Dependency.cs" />
     <Compile Include="Directive.cs" />
+    <Compile Include="File.cs" />
+    <Compile Include="ICommand.cs" />
     <Compile Include="IFile.cs" />
+    <Compile Include="IProcessingContext.cs" />
     <Compile Include="IState.cs" />
     <Compile Include="IProcessor.cs" />
-    <Compile Include="IProject.cs" />
+    <Compile Include="IBuildInput.cs" />
     <Compile Include="ITask.cs" />
     <Compile Include="LogEventLevel.cs" />
     <Compile Include="LoggingSettings.cs" />
+    <Compile Include="MessageTask.cs" />
+    <Compile Include="ProcessingContext.cs" />
     <Compile Include="Processor.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryableFileCollection.cs" />
+    <Compile Include="ReadKeyTask.cs" />
+    <Compile Include="Serialization\CollectionFactory.cs" />
+    <Compile Include="Serialization\ContractResolver.cs" />
+    <Compile Include="Serialization\ExtendedEnumerableSurrogate.cs" />
+    <Compile Include="Serialization\ExtendibleCollectionConverter.cs" />
     <Compile Include="Serialization\Extensions.cs" />
+    <Compile Include="Serialization\IPropertyProvider.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Serialization\ISerializerLocator.cs" />
     <Compile Include="Serialization\JsonSerializer.cs" />
+    <Compile Include="Serialization\KnownJsonConverters.cs" />
     <Compile Include="Serialization\SerializerLocator.cs" />
+    <Compile Include="Serialization\TypeNameConverter.cs" />
     <Compile Include="Serialization\XamlSerializer.cs" />
     <Compile Include="Serialization\XmlSerializer.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="TargetFramework.cs" />
   </ItemGroup>
   <ItemGroup>
