--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,5 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /AzureV2Authentication/.vs
+/AllocationVsRent/.vs/AllocationVsRent/v16/Server/sqlite3
+/AllocationVsRent/AllocationVsRent/BenchmarkDotNet.Artifacts/results
