--- a/EfCore.ScopedVsTransaction/EfCore.ScopedVsTransaction/EfCore.ScopedVsTransaction.csproj
+++ b/EfCore.ScopedVsTransaction/EfCore.ScopedVsTransaction/EfCore.ScopedVsTransaction.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0-rc.1.21416.1" />
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
