--- a/Syncfusion.Error/WebApplication1/WebApplication1.csproj
+++ b/Syncfusion.Error/WebApplication1/WebApplication1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.56" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.60" />
   </ItemGroup>
 
 </Project>
